// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button With Some Emoji 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button With Text 1`] = `
<button
  class="button"
  onclick={[Function]}
>
  Hello Button
</button>
`;
